geoadmin/geoadmin/public/app/css/main.css
html, body {
  font-family: arial, helvetica, verdana, sans-serif;;
}

a:link, a:active, a:visited {
    color: #006699;
}

.x-border-layout-ct {
  background-color: white;
}

#header {
  background-color: white;
  background: white url(../images/logo.dept.png) no-repeat fixed right top;
  width: 100%;
}

#header a {
  color: black;
  text-decoration: none;
  font-size: 0.9em;
  vertical-align: middle;
}

#webServiceContentDiv a {
  color: #333;
}
#webServiceContentDiv {
  padding-top: 1px;
}

.inline-list {
  list-style-type: none;
}
.inline-list li {
  display: inline;
  float: left;
}

.selected {
  font-weight: bold;
}

.pipe {
  background-image: url(../images/pipe.gif);
  background-repeat: no-repeat;
  background-position: center bottom;
  width: 9px;
}

.adminCHlink {
  float: right;
  padding: 3px 20px;
  font-weight: bold;
}

.navServiceBackground {
  height: 20px;
  line-height: 18px;
  background-color: #ccc;
  border-top: 1px solid white;
  border-bottom: 1px solid black;
  padding-right: 5px;
  padding-left: 2px;
  font-size:0.75em;
  letter-spacing:0;
}



.x-toolbar {
  background-image: none;
  background-color: white;
}

.x-panel-noborder .x-panel-tbar-noborder .x-toolbar,
.x-panel-noborder .x-panel-bbar-noborder .x-toolbar {
  border: 0;
}

.x-panel-noborder .x-panel-header-noborder {
    border: 0;
}
/*************************/

.x-panel-header,
.x-tab-strip-top .x-tab-right, .x-tab-strip-top .x-tab-left, .x-tab-strip-top .x-tab-strip-inner,
.x-tab-strip span.x-tab-strip-text {
    background-image: none;
    background-color: #333;
}

.x-panel-header,
.x-tab-strip span.x-tab-strip-text {
    color: white;
    text-align: center;
    font-weight: bold;
}

.x-tab-strip-top .x-tab-strip-active .x-tab-right span.x-tab-strip-text,
.x-tab-strip-top .x-tab-strip-active .x-tab-right,
.x-tab-strip-top .x-tab-strip-active .x-tab-left {
    background-color: red;
}

/*************************/
.x-btn button {
    color: black;
    font-size: 12px;
}

.x-toolbar .collapse, .x-toolbar .link, .x-toolbar .print {
    font-weight: bold;
}

.x-toolbar .collapse {
    background-image: url(../images/tb_fullscreen_logo.png);
}

.x-toolbar .link {
    background-image: url(../images/tb_link_logo.png);
}
.x-toolbar .print {
    background-image: url(../images/tb_print_logo.png);
}
.x-btn-text-icon .x-btn-icon-small-right .x-btn-text {
    padding-right: 25px;
}

#expand-collapse-side-panel {
    height: 100%;
    width: 14px;
    cursor: pointer;
    margin-right: 6px;
}

.ext-ie .side-panel-expanded {
    margin-top: 6px !important;
}

.ext-ie .side-panel-collapsed {
    margin-top: 6px !important;
}

.side-panel-expanded, .side-panel-collapsed {
    background-image: url(../images/tb_toggle_button.png);
    background-repeat: no-repeat;
}
.side-panel-expanded {
    background-position: -14px bottom;
}
.side-panel-collapsed {
    background-position: 0 bottom;
}

#side-panel-xcollapsed {
    display: none !important;
}

.x-btn-no-over .x-btn-tl, .x-btn-no-over .x-btn-tc, .x-btn-no-over .x-btn-tr,
.x-btn-no-over .x-btn-ml, .x-btn-no-over .x-btn-mc, .x-btn-no-over .x-btn-mr,
.x-btn-no-over .x-btn-bl, .x-btn-no-over .x-btn-bc, .x-btn-no-over .x-btn-br {
    background-image: none;
}

.side-panel-tab ul.x-tab-strip {
    width: auto;
    border-bottom: 0;
}
.side-panel-tab ul.x-tab-strip li {
    margin-left: 0;
    width: 50%;
}
.side-panel-tab ul.x-tab-strip li.x-tab-edge,
.side-panel-tab .x-tab-strip-spacer {
    display: none;
}

.side-panel-tab .x-tab-strip-top .x-tab-strip-active .x-tab-right span.x-tab-strip-text {
    padding-bottom: 4px;
}

.side-panel-tab .x-tab-strip-top .x-tab-strip-active .x-tab-right {
    margin-bottom: auto;
}

.webBlindThis {
    position: absolute;
    left: -999px;
    top: -999px;
    width: 0;
    height: 0;
    font-size: 0;
    line-height: 0;
    margin: 0;
    padding: 0;
    overflow: hidden;
    display: inline;
}

